--- a/Example/LuckyPop/TestView.xib
+++ b/Example/LuckyPop/TestView.xib
@@ -3,7 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -12,11 +12,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="TestView" customModule="LuckyPop_Example" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="209"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="259"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SxW-vQ-qYZ">
-                    <rect key="frame" x="10" y="-10" width="373" height="209"/>
+                    <rect key="frame" x="10" y="10" width="373" height="215"/>
                     <string key="text">ajndfijkh aoidufhj oiauhsdfoi uadiouf haoiusdhfoiasuhoiuboiasnbdiouchoiu aofiuhpioasdijmfo;k jasdopfjn ilouahsdoiufgi utyafsdoicuhnioa sd</string>
                     <fontDescription key="fontDescription" type="system" pointSize="25"/>
                     <nil key="textColor"/>
@@ -26,13 +26,13 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="SxW-vQ-qYZ" secondAttribute="bottom" constant="10" id="GCs-qz-TN4"/>
-                <constraint firstAttribute="top" secondItem="SxW-vQ-qYZ" secondAttribute="top" constant="10" id="IxV-eq-mvQ"/>
-                <constraint firstItem="SxW-vQ-qYZ" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" constant="-10" id="Ttx-PC-dMo"/>
-                <constraint firstItem="SxW-vQ-qYZ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="dW8-yD-NXI"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="SxW-vQ-qYZ" secondAttribute="bottom" id="GCs-qz-TN4"/>
+                <constraint firstAttribute="top" secondItem="SxW-vQ-qYZ" secondAttribute="top" constant="-10" id="IxV-eq-mvQ"/>
+                <constraint firstItem="SxW-vQ-qYZ" firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailing" constant="-10" id="Ttx-PC-dMo"/>
+                <constraint firstItem="SxW-vQ-qYZ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="dW8-yD-NXI"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="122.90076335877862" y="-206.69014084507043"/>
+            <point key="canvasLocation" x="122.90076335877862" y="-189.08450704225353"/>
         </view>
     </objects>
     <resources>
